@@ -2,6 +2,11 @@ ctyped changelog
 ================
 
 
+Unreleased
+----------
++ Library now can handle Path objects.
+
+
 v0.7.1 [2019-10-14]
 -------------------
 * Fixed 'Library.load()' LD search.
